@@ -1,5 +1,16 @@
 2014-10-29  Lucas Forschler  <lforschler@apple.com>
 
+        Merge r175185
+
+    2014-10-24  Beth Dakin  <bdakin@apple.com>
+
+            Build fix.
+
+            * UIProcess/mac/WKActionMenuController.h:
+            * UIProcess/mac/WKActionMenuController.mm:
+
+2014-10-29  Lucas Forschler  <lforschler@apple.com>
+
         Merge r175184
 
     2014-10-24  Tim Horton  <timothy_horton@apple.com>
